# EdgeComputerPlatform

./: README.md  server.c
Adge/: README.md
Adge/Integration edition SDK-2019-1-17/MavLinkCom/include/: UnitTests.h
Adge/Integration edition SDK-2019-1-17/sample/linux/Dji/common/: dji_linux_helpers.cpp
Adge/Integration edition SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/MavLinkCom/: CMakeLists.txt
Adge/Integration edition SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/MavLinkCom/src/serial_com/: UdpClientPort.cpp
Adge/Integration edition SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/sample/linux/Dji/flight-control/: flight_control_sample.cpp
Adge/Integration edition SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/sample/linux/Px4/DronecodeSDK-develop/plugins/action/: action.cpp
Adge/webcam-v4l2-master/cam/: list.h
Cloud/: README.md
Cloud/MavLinkCom/MavLinkTest/: main.cpp
Edge/Integration edition SDK-2019-1-17/: CMakeLists.txt
Edge/Integration edition SDK-2019-1-17/MavLinkCom/MavLinkTest/: main.cpp
Edge/Integration edition SDK-2019-1-17/sample/linux/Dji/camera-gimbal/: camera_gimbal_sample.hpp  webcam.h
Edge/Integration edition SDK-2019-1-17/sample/linux/Dji/flight-control/: CMakeLists.txt
Edge/webcam-v4l2-master/cam/: README.md  main  main.cpp
Front/Integration edition SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/MavLinkCom/src/serial_com/: wifi.cpp
Front/Integration edition SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/sample/linux/Dji/camera-gimbal/: main.cpp
Front/Integration edition SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/sample/linux/Dji/telemetry/: main.cpp  telemetry_sample.hpp
MavLinkCom/: CMakeLists.txt
MavLinkCom/MavLinkTest/: UnitTests.cpp
MavLinkCom/common_utils/: CMakeLists.txt
MavLinkCom/src/: CMakeLists.txt
MavLinkCom/src/impl/windows/: WindowsFindSerialPorts.cpp
TX2与无人机/: README.md
TX2与无人机/webcam-v4l2-master/cam/: README.md  client  client.c  main.cpp
TX2与无人机/整合版 SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/sample/linux/Px4/DronecodeSDK-develop/plugins/action/include/plugins/action/: action.h
webcam-v4l2-master/cam/: Jpeg2AVI.cpp  Jpeg2AVI.h  list.cpp  make  webcam.cpp  webcam.h
后台/: README.md  server.c
后台/MavLinkCom/MavLinkTest/: CMakeLists.txt  UnitTests.h
后台/MavLinkCom/src/serial_com/: TcpClientPort.cpp
整合版 SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/MavLinkCom/src/: UnitTests.cpp  UserConfig.txt
整合版 SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/bulid/osdk-core/: djiosdkTargets.cmake
整合版 SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/osdk-core/api/src/: dji_command.cpp
整合版 SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/sample/STM32/OnBoardSDK_STM32/User/: FlightControlSample.cpp  MissionSample.cpp
整合版 SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/sample/linux/: 说明文档2.docx
整合版 SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/sample/linux/Dji/camera-gimbal/: camera_gimbal_sample.cpp  webcam.cpp
整合版 SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/sample/linux/Dji/flight-control/: flight_control_sample.hpp  main.cpp
整合版 SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/sample/linux/Dji/telemetry/: telemetry_sample.cpp
整合版 SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/sample/linux/Px4/: CMakeLists.txt
整合版 SDK-2019-1-17/整合版 SDK/Onboard-SDK-3.7/sample/linux/dronecode/: dronecode_data.h  dronecode_flight_control.h
